feat(assets): add immutable file and parse versions
